--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -12,7 +12,7 @@
         </div>
   
         <div class="d-flex search-container">
-          <input type="text" class="form-control search-input" style="color: #1C593A;" [(ngModel)]="searchTerm" (input)="search()" placeholder="Chercher une plante ...">
+          <input type="text" class="form-control search-input" style="color: #1C593A;" [(ngModel)]="searchTerm" placeholder="Chercher une plante ...">
           <button class="btn search-button">
             <i class="bi bi-search"></i>
           </button>
