--- a/src/app/compnents/liste-commandes/liste-commandes.component.html
+++ b/src/app/compnents/liste-commandes/liste-commandes.component.html
@@ -1,6 +1,9 @@
 <div class="container my-5">
+    <!-- titre de la page -->
     <h2 class="text-center mb-4 cart-header">Liste des Commandes <i class="bi bi-list-check"
             style="margin-left: 20px;"></i></h2>
+
+    <!-- tableau des commandes -->
     <div class="table-responsive">
         <table class="table table-striped table-hover ">
             <thead class="table-dark">
@@ -94,5 +97,6 @@
                 }
             </div>
         </div>
+        
     </div>
 </div>
