--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -1,32 +1,53 @@
 <div class="row align-items-center py-5 m-4">
-
+    <!-- login header -->
     <div class="col-lg-4 contact-details">
         <img src="login.png" alt="Login Image" />
         <h2>Se connecter</h2>
         <p>Connectez vous à votre compte administrateur</p>
     </div>
-
+    <!-- login form -->
     <div class="col-lg-8 contact-form">
         <form [formGroup]="loginForm" (ngSubmit)="onEnvoyer()">
+            <!-- user -->
             <div class="mb-3">
                 <label for="user" class="form-label">Nom d'utilisateur :</label>
-                <input type="text" class="form-control" id="user" placeholder="Entrez votre Nom d'utilisateur" name="user" formControlName="user" />
+                <input type="text" class="form-control" id="user" placeholder="Entrez votre Nom d'utilisateur"
+                    name="user" formControlName="user" />
                 @if(user?.invalid && user?.touched){
-                    <div class="alert alert-warning">
-                        Veuillez remplir ce champ
-                    </div>
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(user?.errors?.['pattern'] && user?.touched){
+                <p class="pAlert">Nom d'utilisateur invalide</p>
+                }
+                @if(user?.errors?.['minlength'] && user?.touched){
+                <p class="pAlert">Minimum 3 caractères</p>
+                }
+                @if(user?.errors?.['maxlength'] && user?.touched){
+                <p class="pAlert">Maximum 20 caractères</p>
                 }
             </div>
+            <!-- password -->
             <div class="mb-3">
                 <label for="password" class="form-label">Mot de passe :</label>
-                <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe" name="password" formControlName="pwd" />
+                <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe"
+                    name="password" formControlName="pwd" />
                 @if(pwd?.invalid && pwd?.touched){
-                    <div class="alert alert-warning">
-                        Veuillez remplir ce champ
-                    </div>
+                <p class="pAlert">Veuillez remplir ce champ</p>
+                }
+                @if(pwd?.errors?.['pattern'] && pwd?.touched){
+                <p class="pAlert">Mot de passe invalide</p>
+                }
+                @if(pwd?.errors?.['minlength'] && pwd?.touched){
+                <p class="pAlert">Minimum 3 caractères</p>
+                }
+                @if(pwd?.errors?.['maxlength'] && pwd?.touched){
+                <p class="pAlert">Maximum 20 caractères</p>
                 }
             </div>
-            <button type="submit" class="submit-btn" [routerLink]="['/ListePlantesAdmin']" [disabled]="loginForm.invalid" >Se connecter <i class="bi bi-box-arrow-in-right" style="margin-left: 10px;"></i></button>
+            <!-- submit -->
+            <button type="submit" class="submit-btn" [routerLink]="['/ListePlantesAdmin']"
+                [disabled]="loginForm.invalid">Se connecter <i class="bi bi-box-arrow-in-right"
+                    style="margin-left: 10px;"></i></button>
             <p class="mt-3">
                 <a href="#">Mot de passe oublié ?</a>
             </p>
